test/e2e/features/extauth_http/testdata/common.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  namespace: kgateway-test
  name: http-extauth-gateway
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: httpbin
spec:
  parentRefs:
  - name: http-extauth-gateway
    namespace: kgateway-test
  hostnames:
  - "www.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 8000
